@@ -4,6 +4,10 @@ python-apt (0.7.13.5) UNRELEASED; urgency=low
   * apt/progress/__init__.py:
     - Fix InstallProgress.updateInterface() to cope with read() returning 0
       on non-blocking file descriptors (LP: #491027).
+  
+  [ Michael Vogt ]
+  * apt/history.py:
+    - simple abstraction for the apt history file 
 
   [ Michael Vogt ]
   * data/templates/Ubuntu.info.in:
